--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,9 @@
-== README
+== COURSECOMPARE
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This project aims at creating a comparison engine of course equivalencies among different universities in the world. This will help exchange students to choose courses at host universities easier and be sure that these courses will be accepted back at their home universities.  
 
-Things you may want to cover:
+* The project is planned to be written in Ruby on Rails  
 
-* Ruby version
+* The database engine is PostgreSQL
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+* The front-end is static HTML
