added dept model

--- a/docs/depts.org
+++ b/docs/depts.org
@@ -2,7 +2,7 @@
 ** Mathematics (11)
 ** Physics (12)
 ** Chemistry (13)
-** Biology (14)
+** Molecular Biology and Genetics (14)
 * Social Sciences (2)
 ** Economics (21)
 ** Political science (22)
@@ -11,6 +11,7 @@
 ** Psychology (25)
 ** Sociology (26)
 ** Linguistics (27)
+** Translation and Interpreting Studies (28)
 * Engineering (3)
 ** Chemical Engineering (31)
 ** Civil Engineering (32)
@@ -34,7 +35,7 @@
 ** Management (61)
 ** International Trade (62)
 ** Tourism administration (63)
-** MIS (64)
+** Management Information Systems (64)
 * Law (7)
 * Medicine (8)
 * Misc (9)
